--- a/lib/InverseDynamics/CMakeLists.txt
+++ b/lib/InverseDynamics/CMakeLists.txt
@@ -17,15 +17,17 @@
 set(InverseDynamics_SOURCES
                         QueuesToInverseDynamics.cpp
                         QueueToXForces.cpp
-                        ExternalForceFromQueue.cpp
-                        JointContactFromOpensim.cpp)
+                        #ExternalForceFromQueue.cpp
+                        #JointContactFromOpensim.cpp
+)
 
 set(InverseDynamics_HEADERS
                         rtosim/InverseDynamics.h
                         rtosim/QueuesToInverseDynamics.h
                         rtosim/QueueToXForces.h
-                        rtosim/ExternalForceFromQueue.h
-                        rtosim/JointContactFromOpensim.h)
+                        #rtosim/ExternalForceFromQueue.h
+                        #rtosim/JointContactFromOpensim.h
+)
 
 source_group("Headers" FILES ${InverseDynamics_HEADERS})
 source_group("Sources" FILES ${InverseDynamics_SOURCES})
@@ -37,9 +39,9 @@ add_library(InverseDynamics
 
 target_include_directories(InverseDynamics PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                                                   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-                                                  ${OPENSIMSIMBODY_INCLUDE_DIRS})
+                                                  ${OpenSim_INCLUDE_DIRS} ${Simbody_INCLUDE_DIRS})
 
-target_link_libraries(InverseDynamics Common Utilities rtb::Concurrency ${OPENSIMSIMBODY_LIBRARIES})
+target_link_libraries(InverseDynamics Common Utilities rtb::Concurrency ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES})
 if(WIN32)
     target_compile_definitions(InverseDynamics PUBLIC WIN32) #Hack to get OpenSim 3.3 to work
 endif()
