--- a/lib/OutputDevice/CMakeLists.txt
+++ b/lib/OutputDevice/CMakeLists.txt
@@ -40,9 +40,9 @@ add_library(OutputDevice
 
 target_include_directories(OutputDevice PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                                         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-                                        ${OPENSIMSIMBODY_INCLUDE_DIRS})
+                                        ${OpenSim_INCLUDE_DIRS} ${Simbody_INCLUDE_DIRS})
 
-target_link_libraries(OutputDevice Common Utilities ${OPENSIMSIMBODY_LIBRARIES})
+target_link_libraries(OutputDevice Common Utilities ${OpenSim_LIBRARIES} ${Simbody_LIBRARIES})
 if(WIN32)
     target_compile_definitions(OutputDevice PUBLIC WIN32) #Hack to get OpenSim 3.3 to work
 endif()
