--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -18,6 +18,6 @@ add_subdirectory(Utilities)
 add_subdirectory(InputDevice)
 add_subdirectory(OutputDevice)
 add_subdirectory(InverseKinematics)
-add_subdirectory(InverseDynamics)
+#add_subdirectory(InverseDynamics)
 add_subdirectory(SignalProcessing)
 add_subdirectory(rtosim)
